Fixed the home page so the topics page doesn't overlap anymore.

--- a/letstalk/static/Theme/css/style.css
+++ b/letstalk/static/Theme/css/style.css
@@ -222,6 +222,7 @@ body {
     -moz-background-size: 50%;
     -o-background-size: 50%;
     background-size: 50%;
+   
 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -245,12 +246,14 @@ body {
 @media (max-width: 767px) {
 	#slide-1 {
 		background-image: none;
+
 	}
 }
 
 	#home-row-1,
 	#home-row-2 {
 		padding-top: 25px;
+		height:750px;
 	}
 	
 	#home-row-1 h1 {
@@ -266,19 +269,19 @@ body {
 	}
 	
 	#home-row-2 .col-12 {
-		height: 232px;
+		height: 232px 
 		padding-top: 30px;
-	}
+	} 
 	
 	#home-row-2 .col-12 .home-hover {
-		height: 166px;
+		 height: 166px; 
 		overflow: hidden;
 		padding-top: 26px;
 		transition: all ease-in .5s;
 	}
 	
 	#home-row-2 .col-12 .home-hover:hover {
-		height: 166px;
+		height: 166px; 
 		padding-top: 0;
 	}
 
@@ -286,6 +289,7 @@ body {
 	#home-row-1,
 	#home-row-2 {
 		padding-top: 16px;
+
 	}
 	
 	#home-row-1 h1 {
@@ -305,6 +309,7 @@ body {
 	background-color: #1abc9c;
 	color: #e4e6e5;
 	padding-top: 90px;
+
 }
 
 	.title-row {
